COmpleted With Login , Register & All Get Function in Angular